--- a/AtkTennisWeb/Views/AdminHome/Index.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/Index.cshtml
@@ -290,9 +290,7 @@
 
                                                     var resCancel = Model.reservationCancels.Where(x => x.ResStartTime == Model.resTimes[i].ResTimes && x.CourtId == item.CourtId).FirstOrDefault();
 
-                                                    var court = Model.courtTimeInfs.SingleOrDefault(x => x.CourtId == item.CourtId);
-
-                                                    var period = (60 / Convert.ToInt32(court.CourtTimePeriod));
+                                                    var period = (60 / Convert.ToInt32(item.CourtTimePeriod));
 
 
 
@@ -1902,7 +1900,7 @@
 
     function checkMe(id) {
 
-        debugger;
+       
 
         var per = $("#" + id).attr("per");
         var checkID = parseInt(id.split("_")[1]);
@@ -1910,11 +1908,11 @@
         var checkList = [];
         var checkTrueList = [];
 
-
-
         $('#checkTimeTable input:checked:not(:disabled)').each(function () {
             checkTrueList.push(this.id);
         });
+
+ 
 
         if (per == 15) {
 
@@ -1929,45 +1927,54 @@
             }
 
 
-        else if (checkTrueList.length < 4 && checkTrueList.length != 1 ) {
+            else if (checkTrueList.length < 4 && checkTrueList.length != 1) {
 
-            for (var i = 0; i < checkTrueList.length; i++) {
+                for (var i = 0; i < checkTrueList.length; i++) {
 
-                $("#t_" + i).prop('checked', false);
-            }
-
-        }
-
-        else if (checkTrueList.length > 4) {
-
-            for (var i = 0; i < checkTrueList.length; i++) {
-                var checkedTime = checkTrueList[i];
-
-                $('#' + checkedTime).prop('checked', false);
-            }
-
-
-            for (var i = checkID; i < (checkID + 4); i++) {
-
-                $("#t_" + i).prop('checked', true);
-
-                checkList.push("t_" + i);
-
-            }
-        }
-
-
-        else
-            for (var i = checkID; i < (checkID + 4); i++) {
-
-                $("#t_" + i).prop('checked', true);
-
-                checkList.push("t_" + i);
-
-
+                    $("#t_" + i).prop('checked', false);
+                }
 
             }
 
+
+
+            //else if (checkTrueList.length > 4 && checkTrueList[(checkTrueList.length - 1)].split("_")[1] - checkTrueList[(checkTrueList.length - 2)].split("_")[1] == 1 ) {
+
+            //    for (var i = 0; i < checkTrueList.length; i++) {
+            //        var checkedTime = checkTrueList[i];
+
+            //        $('#' + checkedTime).prop('checked', true);
+            //    }
+
+            //}
+
+
+            else if (checkTrueList.length > 4) {
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+                    var checkedTime = checkTrueList[i];
+
+                    $('#' + checkedTime).prop('checked', false);
+                }
+
+
+                for (var i = checkID; i < (checkID + 4); i++) {
+
+                    $("#t_" + i).prop('checked', true);
+
+                    checkList.push("t_" + i);
+
+                }
+            }
+
+            else
+                for (var i = checkID; i < (checkID + 4); i++) {
+
+                    $("#t_" + i).prop('checked', true);
+
+                    checkList.push("t_" + i);
+
+                }
         }
 
         else if (per == 30) {
@@ -2013,7 +2020,7 @@
 
         }
 
-        else  
+        else
 
             if (checkTrueList.length > 1) {
 
@@ -2035,7 +2042,7 @@
                 }
             }
 
-        
+
 
     }
 
